Fix overscroll on mobile; Android button styling

--- a/web/app/themes/artandscience/assets/styles/components/_base.scss
+++ b/web/app/themes/artandscience/assets/styles/components/_base.scss
@@ -96,11 +96,14 @@ img {
 }
 
 ::selection {
-  // color: $cream;
   background: rgba($orange,0.5);
 }
 
 button {
   user-select: none;
   border-radius: 0px;
+
+  // Remove android color change on tap
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
